--- a/branches/2.1/Tpl/Home/Default/Common/footer.html
+++ b/branches/2.1/Tpl/Home/Default/Common/footer.html
@@ -13,7 +13,7 @@
     </div>
 </notempty>
     
-<footer class="indexFooter">
+<footer class="indexFooter"<empty name="links">style="margin-top:20px;"</empty>>
 	<div class="wrap clearfix">
         <p>版权所有©<span class="ffa">2013-2020</span>&nbsp;&nbsp;HuiCms&nbsp;&nbsp;<span class="ffa">{$site_icp}</span></p>
         <p style="margin-top: 5px;">Powered by HuiCms 1.0 </p>
