--- a/branches/2.1/Tpl/Home/Default/User/Register.html
+++ b/branches/2.1/Tpl/Home/Default/User/Register.html
@@ -3,70 +3,89 @@
         <div class="reg-main">
             <!--注册步骤-->
             <form model-node="normal_form" method="POST" action="" name="" id="">
-                <div class="article boxShadow">
-                    <div class="title">注册帐号</div>
-                    <dl class="item">
-                        <dd>
-                            <div class="form-tt"><i class="text-required">*</i>用户名：</div>
-                            <div class="form-row" style="z-index:99">
-                                <input class="s-txt-focus" name="user" autocomplete="off" type="text" value="" />
+                    <div class="article boxShadow">
+                        <div class="title">注册帐号</div>
+                        <div class="register_left">
+                            <dl class="item">
+                                <dd>
+                                    <div class="form-tt"><i class="text-required">*</i>用户名：</div>
+                                    <div class="form-row" style="z-index:99">
+                                        <input class="s-txt-focus" name="user" autocomplete="off" type="text" value="" />
+                                    </div>
+                                </dd>
+                                <dd>
+                                    <div class="form-tt"><i class="text-required">*</i>邮箱：</div>
+                                    <div class="form-row" style="z-index:99">
+                                        <input class="s-txt-focus" name="email" autocomplete="off" type="text" value="" />
+                                    </div>
+                                </dd>
+                                <dd>
+                                    <div class="form-tt"><i class="text-required">*</i>登录密码：</div>
+                                    <div class="form-row psd">
+                                        <div style="overflow:hidden;*zoom:1">
+                                            <input event-node="password" name="password" type="password" value="" class="s-txt-focus"/>
+                                        </div>
+                                    </div>
+                                </dd>
+                                <dd>
+                                    <div class="form-tt"><i class="text-required">*</i>确认密码：</div>
+                                    <div class="form-row">
+                                        <input event-node="repassword" name="repassword" type="password" class="s-txt-focus"/>
+                                    </div>
+                                </dd>
+                                <dd>
+                                    <div class="form-tt"><i class="text-required">*</i>昵称：</div>
+                                    <div class="form-row">
+                                        <div style="overflow:hidden;*zoom:1">
+                                            <input name="uname" autocomplete="off" type="text" value="" class="s-txt-focus"/>
+                                        </div>
+                                    </div>
+                                </dd>
+                                <dd>
+                                    <div class="form-tt"><i class="text-required">*</i>性别：</div>
+                                    <div class="form-row">
+                                        <label><input name="sex" type="radio" class="s-radio" value="1" checked="checked"/>男</label>
+                                        <label><input event-node="radio" type="radio" name="sex" value="2" class="s-radio"  />女</label>
+                                        <label><input name="sex" type="radio" class="s-radio" value="0" checked="checked"/>保密</label>
+                                    </div>
+                                </dd>
+                                <dd>
+                                    <div class="form-tt"><i class="text-required">*</i>验证码：</div>
+                                    <div class="form-row">
+                                        <div style="padding:3px 0 0 0;*height:30px;overflow:hidden;*zoom:1;">
+                                            <input name="verify" type="text" class="s-txt" style="width:70px" id="verCode"/>
+                                            <img src="" id="verifyimg" class="alM" onclick="change_verify()"/>
+                                            <a href="###" onclick="change_verify()" alt="换一张">看不清楚，换一个</a>
+                                        </div>
+                                    </div>
+                                </dd>
+                                <dd class="mt15">
+                                    <div class="form-tt"></div>
+                                    <div class="form-row actionBtn">
+                                        <a class="btn-register" href="javascript:;">立即注册</a>
+                                    </div>
+                                </dd>
+                            </dl>
+                        </div>
+                        <div class="register_right">
+                            <div class="rst_login">
+                                <span>已经有帐号？请直接登录</span>
+                                <a href="/" class="btn-register">登录</a>
                             </div>
-                        </dd>
-                        <dd>
-                            <div class="form-tt"><i class="text-required">*</i>邮箱：</div>
-                            <div class="form-row" style="z-index:99">
-                                <input class="s-txt-focus" name="email" autocomplete="off" type="text" value="" />
-                            </div>
-                        </dd>
-                        <dd>
-                            <div class="form-tt"><i class="text-required">*</i>登录密码：</div>
-                            <div class="form-row psd">
-                                <div style="overflow:hidden;*zoom:1">
-                                    <input event-node="password" name="password" type="password" value="" class="s-txt-focus"/>
+                            <notempty name="oauth">
+                                <div class="other_login">
+                                    <span>您也可以用以下方式登录：</span>
+                                    <volist name="oauth" id="oh">
+                                        <a href='{:U("Home/Oauth/OtherLogin","t=$oh[type]")}' class="o_icon" title="{$oh.name}">
+                                            <img src="__PUBLIC__/Home/images/Connect_logo_{$oh[type]}.png">
+                                        </a>
+                                    </volist>
                                 </div>
-                            </div>
-                        </dd>
-                        <dd>
-                            <div class="form-tt"><i class="text-required">*</i>确认密码：</div>
-                            <div class="form-row">
-                                <input event-node="repassword" name="repassword" type="password" class="s-txt-focus"/>
-                            </div>
-                        </dd>
-                        <dd>
-                            <div class="form-tt"><i class="text-required">*</i>昵称：</div>
-                            <div class="form-row">
-                                <div style="overflow:hidden;*zoom:1">
-                                    <input name="uname" autocomplete="off" type="text" value="" class="s-txt-focus"/>
-                                </div>
-                            </div>
-                        </dd>
-                        <dd>
-                            <div class="form-tt"><i class="text-required">*</i>性别：</div>
-                            <div class="form-row">
-                                <label><input name="sex" type="radio" class="s-radio" value="1" checked="checked"/>男</label>
-                                <label><input event-node="radio" type="radio" name="sex" value="2" class="s-radio"  />女</label>
-                                <label><input name="sex" type="radio" class="s-radio" value="0" checked="checked"/>保密</label>
-                            </div>
-                        </dd>
-                        <dd>
-                            <div class="form-tt"><i class="text-required">*</i>验证码：</div>
-                            <div class="form-row">
-                                <div style="padding:3px 0 0 0;*height:30px;overflow:hidden;*zoom:1;">
-                                    <input name="verify" type="text" class="s-txt" style="width:70px" id="verCode"/>
-                                    <img src="" id="verifyimg" class="alM" onclick="change_verify()"/>
-                                    <a href="###" onclick="change_verify()" alt="换一张">看不清楚，换一个</a>
-                                </div>
-                            </div>
-                        </dd>
-                        <dd class="mt15">
-                            <div class="form-tt"></div>
-                            <div class="form-row actionBtn">
-                                <a class="btn-register" href="javascript:;" onclick="$('#ajax_register_form').submit();return false;">立即开通</a>
-                            </div>
-                        </dd>
-                    </dl>
-                </div>
-            </form>
+                            </notempty>
+                            
+                        </div>
+                    </div>
+                </form>
         </div>
     </div>
 </div>
