--- a/branches/2.1/Tpl/Home/Default/Index/index.html
+++ b/branches/2.1/Tpl/Home/Default/Index/index.html
@@ -1,3 +1,15 @@
+<script src="__PUBLIC__/Home/js/jquery.fancybox-1.3.1.pack.js"></script>
+<script>
+    $(document).ready(function() { 
+        $("a[rel=group]").fancybox({
+            'titlePosition' : 'over',
+            'cyclic'        : true,
+            'titleFormat'	: function(title, currentArray, currentIndex, currentOpts) {
+                return '<span id="fancybox-title-over">' + (currentIndex + 1) + ' / ' + currentArray.length + (title.length ? ' &nbsp; ' + title : '') + '</span>';
+            }
+        });
+    });    
+</script>
 <div class="warp">
     <div id="top">
         <div class="sep1">这是一个简单小巧实用的CMS网站管理系统</div>
