--- a/Tpl/Home/Default/layout.html
+++ b/Tpl/Home/Default/layout.html
@@ -10,9 +10,12 @@
         <link href="__PUBLIC__/Home/css/style.css" rel="stylesheet" type="text/css" />
         <link href="__PUBLIC__/Home/css/fancybox.css" rel="stylesheet" type="text/css" />
         <script src="__PUBLIC__/Lib/jquery/js/jquery-1.8.3.js"></script>
+        <script src="__PUBLIC__/Lib/validate/jquery.validate.1.9.js"></script>
+        <script src="__PUBLIC__/Lib/validate/jquery.metadata.js"></script>
+        <script src="__PUBLIC__/Lib/validate/messages_cn.js"></script>
         <script src="__PUBLIC__/Home/js/global.js"></script>
         <script src="__PUBLIC__/Home/js/jquery.cycle.all.latest.js"></script>   
-        <script src="__PUBLIC__/Home/js/jquery.fancybox-1.3.1.pack.js"></script>   
+        <script type="text/javascript" src="__PUBLIC__/Home/js/jquery.poshytip.min.js"></script>
         <script>	
             $(document).ready(function() { 
                 $('#slideshow').cycle({ 
@@ -35,15 +38,7 @@
                     $(this).find('.slideinner').fadeIn('fast');
                 }
             });
-            $(function(){
-                $("a[rel=group]").fancybox({
-                    'titlePosition' : 'over',
-                    'cyclic'        : true,
-                    'titleFormat'	: function(title, currentArray, currentIndex, currentOpts) {
-                            return '<span id="fancybox-title-over">' + (currentIndex + 1) + ' / ' + currentArray.length + (title.length ? ' &nbsp; ' + title : '') + '</span>';
-                    }
-                });
-            });
+            
         </script>
         <script type="text/javascript">
             $(function() {
@@ -54,8 +49,8 @@
 
     <body>
         <a href="#top" id="toTop"></a>
-        <include file="Common:header" />
-         {__CONTENT__}
-        <include file="Common:footer" />
-    </body>
+    <include file="Common:header" />
+    {__CONTENT__}
+    <include file="Common:footer" />
+</body>
 </html>
